# TheseusAndTheMinotaur

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md
assets/: README.md
assets/biomes/: README.md  crystal_caverns.json  dark_forest.json  mechanical_halls.json  stone_labyrinth.json
assets/levels/: README.md
assets/levels/test/: test-auto-turnstile.json  test-biome-forest.json  test-biome-stone.json  test-conveyor.json  test-crumbling-floor.json  test-groove-box.json  test-ice.json  test-locking-gate.json  test-manual-turnstile.json  test-medusa.json  test-moving-platform.json  test-pressure-plate.json  test-spike-trap.json  test-teleporter.json
assets/levels/tutorial/: tutorial-01.json  tutorial-02.json
assets/strings/: en.json
design/: 00-index.md  01-core-mechanics.md  02-visual-style.md  03-level-design.md  04-overworld.md  05-ui-ux.md  06-input.md  07-audio.md  08-engine-architecture.md  09-content-pipeline.md  10-platform-targets.md  11-implementation-plan.md  12-proposed-shadow-system.md  13-auto-turnstile-animations.md
src/: README.md  main.c
src/data/: README.md  biome_config.c  biome_config.h  save_data.c  save_data.h  settings.c  settings.h  strings.c  strings.h
src/engine/: README.md  anim_queue.c  anim_queue.h  engine.c  engine.h  input_buffer.c  input_buffer.h  state_manager.c  state_manager.h  tween.c  tween.h  utils.h
src/game/: README.md  anim_event.h  feature.c  feature.h  game.h  grid.c  grid.h  level_loader.c  level_loader.h  minotaur.c  minotaur.h  tile_physics.c  tile_physics.h  turn.c  turn.h  undo.c  undo.h
src/input/: README.md  gamepad_adapter.c  gamepad_adapter.h  input_manager.c  input_manager.h  input_types.h  keyboard_adapter.c  keyboard_adapter.h
src/platform/: README.md  platform.c  platform.h
src/render/: README.md  actor_render.c  actor_render.h  ao_baker.c  ao_baker.h  camera.c  camera.h  death_anim.c  death_anim.h  diorama_gen.c  diorama_gen.h  dust_puff.c  dust_puff.h  floor_lightmap.c  floor_lightmap.h  lighting.c  lighting.h  occupancy_grid.c  occupancy_grid.h  renderer.c  renderer.h  shader.c  shader.h  text_render.c  text_render.h  ui_draw.c  ui_draw.h  voxel_mesh.c  voxel_mesh.h
src/scene/: README.md  puzzle_scene.c  puzzle_scene.h  save_select_scene.c  save_select_scene.h  settings_scene.c  settings_scene.h  test_level_scene.c  test_level_scene.h  title_scene.c  title_scene.h
(+27 files in other folders)
